fix: Fixed font color for education pages in dark mode

--- a/assets/styles/components/texts.scss
+++ b/assets/styles/components/texts.scss
@@ -72,7 +72,8 @@ html[data-theme='dark'] {
   h2,
   h3,
   h4,
-  h5 {
+  h5,
+  h6 {
     color: get-dark-color('heading-color');
   }
 
